--- a/styles/index.styl
+++ b/styles/index.styl
@@ -24,13 +24,6 @@ p
   font-family 'Source Code Pro', monospace
   margin 0
 
-.postidinfo
-  margin 0
-  padding-left 20%
-  width 60%
-  background paleyellow
-  font-size 0.7em
-
 .head-text
   text-transform uppercase
   color #fff
@@ -42,8 +35,8 @@ p
   border-bottom #3b5999 0.7em solid
 
   h2
-    border-left: #3b5999 0.01em solid
-    padding-left: 0.1em
+    border-left #3b5999 0.01em solid
+    padding-left 0.1em
 
 .simpletext
   padding-right 10% 
@@ -79,6 +72,10 @@ p
   border-right 8%
   text-align right
   background #E8FFC2
+  color #3b59999
+
+  a
+    color #3b59999
 
 .left
   text-align left
@@ -140,6 +137,26 @@ p
 
 .italic
   font-style italic
+
+.examplelist
+  margin-left 10%
+  margin-right 10%
+
+  p
+    size: 1.3em
+
+  a
+    color darkblue
+
+  a:hover
+    color red
+    font-style normal
+
+.exampleentry
+  background-color paleyellow
+  padding 5%
+  width 100%
+
 
 // modal w3c copy-pasta
 .modal
