work in progress, realitymeter lodash

--- a/sections/realitymeter.jade
+++ b/sections/realitymeter.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/js/local/realitymeter.css')
     script(type='text/javascript', src='/js/vendor/d3.min.js')
-    script(type='text/javascript', src='/js/vendor/c3.min.js')
+    script(type='text/javascript', src='/js/vendor/lodash.min.js')
     script(type='text/javascript', src='/js/local/realitymeter.js')
     title ઉ RealityMeter
 
