fixed toggle button home

--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -4,6 +4,8 @@ html
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
     script(type='text/javascript', src='/js/vendor/lodash.min.js')
+    script(type='text/javascript', src='/js/vendor/jquery.js')
+    script(type='text/javascript', src='/js/vendor/collapse.js')
     script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
     script(type='text/javascript', src='/js/local/suggest.js')
     meta(charset="utf-8")
