--- a/sections/realitymeter.jade
+++ b/sections/realitymeter.jade
@@ -4,6 +4,7 @@ html
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/js/local/realitymeter.css')
+    script(type='text/javascript', src='/js/vendor/jquery.js')
     script(type='text/javascript', src='/js/vendor/d3.min.js')
     script(type='text/javascript', src='/js/vendor/lodash.min.js')
     script(type='text/javascript', src='/js/local/realitymeter.js')
