Moving stuff around

--- a/extension/styles/app.scss
+++ b/extension/styles/app.scss
@@ -2,7 +2,7 @@
 @import 'visualDebug';
 
 div[role="banner"] {
-    background-color: tomato !important;
+    background-color: green !important;
 }
 
 #fbtrex--root {
