--- a/sections/realitycheck/timelines.jade
+++ b/sections/realitycheck/timelines.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    link(href='https://fonts.googleapis.com/css?family=EB+Garamond', rel='stylesheet')
+    link(href='/js/local/EB+Garamond-Font.css', rel='stylesheet')
     link(href='/js/local/realitycheck.css', rel='stylesheet', type='text/css')
     script(type='text/javascript', src='/js/vendor/d3.min.js')
     script(type='text/javascript', src='/js/vendor/lodash.min.js')
