--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -34,7 +34,9 @@ html
           li
             a(href='/realitymeter') RealityMeter
           li
-            a(href='/realitycheck/random') Random User
+            a(href='/realitycheck/activities/random') rand(activities)
+          li
+            a(href='/realitycheck/timelines/random') rand(timelines)
           li
             a(href='/slides-long') Slides
 
