--- a/sections/realitycheck/activities.jade
+++ b/sections/realitycheck/activities.jade
@@ -45,7 +45,7 @@ html
           li
             a(href='/impact') Impact
           li
-            a(href='/realitycheck/random') Random User
+            a(href='/realitycheck/timelines/#{userId}') Timelines
 
   if userId !== 0
 
