--- a/sections/realitymeter.jade
+++ b/sections/realitymeter.jade
@@ -33,7 +33,7 @@ html
           li
             a(href='/impact') Impact
           li
-            a(href='/realitycheck/random') Random User
+            a(href='/realitycheck/activities/random') Random User
 
     .container-fluid
       div(id="realitygraph")
