--- a/sections/realitycheck/timelines.jade
+++ b/sections/realitycheck/timelines.jade
@@ -2,7 +2,8 @@ doctype html
 html
   head
     link(href='/js/local/EB+Garamond-Font.css', rel='stylesheet')
-    link(href='/js/local/realitycheck.css', rel='stylesheet', type='text/css')
+    link(href='/js/local/realitycheck.css', rel='stylesheet')
+
     script(type='text/javascript', src='/js/vendor/d3.min.js')
     script(type='text/javascript', src='/js/vendor/lodash.min.js')
     script(type='text/javascript', src='/js/vendor/moment.min.js')
@@ -13,21 +14,36 @@ html
       title facebook.tracking.exposed invalid Personal page
 
   body(onload=" loadTimelines(#{userId}, '#visualization');")
+  div.simpletext
     .intro
-      .intro-copy
+      if userId !== 0
         h1.intro-title Meta-Timeline: a timeline of timelines
-        div.container-fluid
-          span.container-fluid.col-md-4.niceborder
-            p Facebook is so present in most people&apos;s lives that we tend to forget some of the logics that run it.
-            p How does it decides what we get in our newsfeed? 
-            p We have no idea, but this is an attempt to shed a small light on it.
-          span.col-md-2
-          span.container-fluid.col-md-4.niceborder 
-            p If you have the 
-                a.intro-link(href='/#useit') facebook.tracking.exposed script
-            | installed, you can choose to see some of the past times (timelines) you have been scrolling Facebook.
-            p Each column represents a specific time you have been on Facebook scrolling, up to a maximum of 25 posts per session. Hovering or clicking on a post (a rectangle) will highlight whenever that particular post appeared in other occasions.
-      |         
+        h4.right User 
+          a(href="https://www.facebook.com/#{userId}") ઉ#{displayName}
+          |, #{timelines} posts (last #{distance} ago)
+      else
+        h2 This
+          b would show 
+          | how algoritm manipulation looks like...
+        h1.center Unfortunatly, the user (ઉ) requested do no exists in this system.
+
+  div.simpletext
+    .intro
+      div.container-fluid
+        span.container-fluid.col-md-4.niceborder
+          p Facebook is so present in most people&apos;s lives that we tend to forget some of the logics that run it.
+          p How does it decides what we get in our newsfeed? 
+          p We have no idea, but this is an attempt to shed a small light on it.
+        span.col-md-2
+        span.container-fluid.col-md-4.niceborder 
+          p If you have the 
+              a.intro-link(href='/#useit') facebook.tracking.exposed script
+          | installed, you can choose to see some of the past times (timelines) you have been scrolling Facebook.
+          p Each column represents a specific time you have been on Facebook scrolling, up to a maximum of 25 posts per session. Hovering or clicking on a post (a rectangle) will highlight whenever that particular post appeared in other occasions. 
+          p Don't forget to take a look on the 
+            a(href="/realitycheck/activities/#{userId}") activities page 
+            | of the user.
+
       .intro-input
         #refreshes-field.input-container
           input.refresh-num(type='number', value='6', min='1', max='6', onfocus="setFocus('refreshes-field')")
