--- a/styles/index.styl
+++ b/styles/index.styl
@@ -29,7 +29,7 @@ p
   color #fff
 
 .propaganda
-  padding-right 10% 
+  padding-right 10%
   padding-left 10%
   padding-bottom 2%
   border-bottom #3b5999 0.7em solid
@@ -39,7 +39,7 @@ p
     padding-left 0.1em
 
 .simpletext
-  padding-right 10% 
+  padding-right 10%
   padding-left 10%
   padding-bottom 1%
 
@@ -106,7 +106,7 @@ p
     font-size 12px
 
 .fontana
-  font-family: museo-slab,Georgia,"Times New Roman",Times,serif  
+  font-family: museo-slab,Georgia,"Times New Roman",Times,serif
 
 .long
   font-size 0.8em
@@ -124,9 +124,9 @@ p
   color white
 
 .green
-  color green 
+  color green
 
-.grey 
+.grey
   color #d3d3d3
 
 .red
@@ -185,7 +185,18 @@ p
   font-weight bold
 
 .close:hover
-.close:focus 
+.close:focus
   color black
   text-decoration none
   cursor pointer
+
+ .team .row
+    padding: 5%;
+
+.avatar img
+    max-width: 50%;
+    vertical-align: middle;
+
+.logo
+   max-width: 32px;
+   margin-left: 5%;
