add team section

--- a/sections/next.jade
+++ b/sections/next.jade
@@ -76,4 +76,8 @@ html
       div.propaganda 
         include links
 
+    div#team
+        div.propaganda
+            include team
+
     div.footer 
