review vision/mission

--- a/sections/next.jade
+++ b/sections/next.jade
@@ -22,11 +22,11 @@ html
           h1 facebook.tracking.exposed
       div.container-fluid
         p.smile.center description 
-          span.green 55% 
+          span.green 65% 
           | ⌁ infrastructure 
-          span.red 20% 
+          span.red 10% 
           | ⌁ stability  
-          span.red meh... 
+          span.red ALPHA STAGE 
           | ⌁ funding 
           span.red 
             a(href="https://paypal.me/claudioGifts", target="_blank") donate?
@@ -43,7 +43,7 @@ html
         div.collapse.navbar-collapse(id="thenavbar")
           ul.nav.navbar-nav
             li
-              a(href='#mission') What
+              a(href='#vision') What
             li
               a(href='#useit') Use It 
             li
@@ -51,6 +51,10 @@ html
             li
               a(href='/impact') Stats
 
+
+    div#vision
+      div.polite-propaganda
+        include vision
 
     div#mission
       div.propaganda
