impemented getNodeStats and a simple cleaning

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -34,16 +34,13 @@ html
           li
             a(href='/realitymeter') RealityMeter
           li
-            a(href='/realitycheck/activities/random') rand(activities)
-          li
-            a(href='/realitycheck/timelines/random') rand(timelines)
-          li
             a(href='/slides-long') Slides
 
   .container-fluid
     .simpletext
       h2 Adoption statistics
       p Since the end of Summer 2016 facebook.tracking.exposed is in α release, below the graph of the collected data.
+      p Simple breakdown: #{users} unique users provided #{posts} posts in #{timelines} timelines.
 
   .container-fluid
     div(id="timeAdoption")
