--- a/styles/index.styl
+++ b/styles/index.styl
@@ -190,9 +190,6 @@ p
    max-width: 32px
    margin-right: 3%
 
-#team .row
-    padding: 3%
-
 .close
   color #aaa
   float right
@@ -204,3 +201,18 @@ p
   color black
   text-decoration none
   cursor pointer
+
+.team-name
+  font-size 2em
+
+.team-role
+  color grey
+
+.team-twitter
+  font-size 0.9em
+
+.team-github
+  font-size 0.9em
+
+.team-member
+  float: right;
