fixed carousel team

--- a/sections/team/kiki.jade
+++ b/sections/team/kiki.jade
@@ -1,10 +1,9 @@
 block kiki
-  .team-member
-    div.col-md-1
+    div.col-md-6
       img(class="img-circle" src="images/kiki.jpg")
-    div.col-md-3
-    div.col-md-4
-      p(class="team-name") Kiki something?
-      p(class="team-role") something
-      p(class="team-twitter") TODO link?
-      p(class="team-github") TODO link?
+    div.col-md-6
+      p(class="team-name") "Kiki" Carnevali
+      p(class="team-role") Frontend developer
+      p(class="team-bio") 
+      Lover of the GNU philosophy,  for job writes blasphemies in Javascript and custom web interfaces.
+      p(class="team-github") https://github.com/digitigrafo
