--- a/styles/index.styl
+++ b/styles/index.styl
@@ -214,5 +214,10 @@ p
 .team-github
   font-size 0.9em
 
-.team-member
-  float: right;
+/*.team-member
+  float: right;*/
+.img-circle {
+    border-radius: 50%;
+    margin: 0 50%;
+    transform: translate(-50%,0%);
+}
