improved realitymeter UX and comms

--- a/sections/webscripts/realitymeter.css
+++ b/sections/webscripts/realitymeter.css
@@ -11,5 +11,6 @@
 }
 
 svg {
-    background-color: LightGoldenRodYellow;
+    /* background-color: LightGoldenRodYellow; */
+    background-color: white;
 }
