added first kind of interaction in realitymeter

--- a/sections/realitymeter.jade
+++ b/sections/realitymeter.jade
@@ -4,6 +4,7 @@ html
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/js/local/realitymeter.css')
+    link(href='/js/local/EB+Garamond-Font.css', rel='stylesheet')
     script(type='text/javascript', src='/js/vendor/jquery.js')
     script(type='text/javascript', src='/js/vendor/moment.min.js')
     script(type='text/javascript', src='/js/vendor/d3.min.js')
@@ -35,6 +36,7 @@ html
             a(href='/impact') Impact
 
     .container-fluid
+      span(id="infograph") tap on the dots with fingers or mouse
       div(id="realitygraph")
 
       .larger-content
