additional cleaning to the team

--- a/sections/team/bic.jade
+++ b/sections/team/bic.jade
@@ -8,4 +8,4 @@ block bic
       p(class="team-twitter") 
         a(href="https://twitter.com/Gilberto_Conti" target="blank") @Gilberto Conti
       p(class="team-github") 
-        a(href="https://github.com/gibix" target="blank") on Github
+        a(href="https://github.com/gibix" target="blank") gibix on Github
