--- a/sections/team/kiki.jade
+++ b/sections/team/kiki.jade
@@ -4,6 +4,6 @@ block kiki
     div.col-md-6
       p(class="team-name") "Kiki" Carnevali
       p(class="team-role") Frontend developer
-      p(class="team-bio") 
-      Lover of the GNU philosophy,  for job writes blasphemies in Javascript and custom web interfaces.
-      p(class="team-github") https://github.com/digitigrafo
+      p(class="team-bio") Lover of the GNU philosophy, for job writes blasphemies in Javascript and custom web interfaces.
+      p(class="team-github") 
+        a(href="https://github.com/digitigrafo") digitigrafo on Github
