--- a/sections/next.jade
+++ b/sections/next.jade
@@ -22,14 +22,16 @@ html
           h1 facebook.tracking.exposed
       div.container-fluid
         p.smile.center description 
-          span.green 65% 
+          span.green 75% 
           | ⌁ infrastructure 
-          span.red 10% 
+          span.red 20% 
+          | ⌁ time 
+          span.yellow endangered 
           | ⌁ stability  
           span.red ALPHA STAGE 
           | ⌁ funding 
           span.red 
-            a(href="https://paypal.me/claudioGifts", target="_blank") donate?
+            a(href="https://paypal.me/claudioGifts", target="_blank") Zero
 
     nav.navbar.navbar-default
       div.container
@@ -47,7 +49,7 @@ html
             li
               a(href='#useit') Use It 
             li
-              a(href='/old-homepage') Old Homepage
+              a(href='#team') About Us
             li
               a(href='/impact') Stats
 
@@ -76,12 +78,12 @@ html
       div.propaganda
         include getinvolved 
 
-    div#links
-      div.propaganda 
-        include links
-
     div#team
         div.propaganda
             include team
+
+    div#links
+      div.propaganda 
+        include links
 
     div.footer 
