--- a/sections/next.jade
+++ b/sections/next.jade
@@ -24,11 +24,11 @@ html
         p.smile.center description 
           span.green 75% 
           | ⌁ infrastructure 
-          span.red 20% 
+          span.red 60% 
           | ⌁ time 
           span.yellow endangered 
           | ⌁ stability  
-          span.red ALPHA STAGE 
+          span.yellow ß 
           | ⌁ funding 
           span.red 
             a(href="https://paypal.me/claudioGifts", target="_blank") Zero
