slides for Netzpolitick abend 1st of November

--- a/sections/next.jade
+++ b/sections/next.jade
@@ -52,6 +52,8 @@ html
               a(href='#team') About Us
             li
               a(href='/impact') Stats
+            li
+              a(href='/netzpolitick/') Slides
 
 
     div#vision
