completed pictures, reduced content, reviewed a bit

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -34,7 +34,7 @@ html
           li
             a(href='/realitymeter') RealityMeter
           li
-            a(href='/slides-long') Slides
+            a(href='/netzpolitick/') Slides
 
   .container-fluid
     .simpletext
