--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -25,12 +25,12 @@ html
           span.green 90% 
           | ⌁ infrastructure 
           span.red 20% 
-          | ⌁ ß-release 
+          | ⌁ alpha-release 
           span.green -11 days 
           | ⌁ morale 
           span.green 101% 
           | ⌁ stability 
-          span.red BAH! 
+          span.red BAD 
           | ⌁ funding 
           span.red 
             a(href="https://paypal.me/claudioGifts", target="_blank") broke
@@ -61,7 +61,7 @@ html
             li
               a(href='#links') Links 
             li
-              a(href='/page-long-presentation') Slides
+              a(href='/netzpolitick/') Slides
 
     div#what
       div.propaganda
