--- a/sections/slides/link.jade
+++ b/sections/slides/link.jade
@@ -4,8 +4,8 @@ section
 
   section
     p
-      b Personalisation algorithms 
-      | are tools on social politics! ↓ 
+      b Personalisation algorithms ==
+      | tools of social politics! ↓ 
 
   section
     img(src="/images/blockingofextremism.png")
@@ -14,20 +14,22 @@ section
       | (2016-06-25)
 
   section
-    p https://www.theguardian.com/technology/2014/jun/29/facebook-users-emotions-news-feeds 
-    | (2014-06-29)
-    p paper: http://www.pnas.org/content/111/24/8788.full
+    img(src="/images/facebookEmotionsManipulation.png")
+    p
+      a(href="https://www.theguardian.com/technology/2014/jun/29/facebook-users-emotions-news-feeds") via TheGuardian
+      | (2014-06-29) + 
+      a(href="http://www.pnas.org/content/111/24/8788.full") Paper
+      |.
 
   section
-    p https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/ 
+    img(src="/images/facebookRulesOnExperimenting.png")
+    p 
+      a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/") via TechnologyReview
     | (2016-06-15)
 
   section
-    p https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0 
+    img(src="/images/ferguson.png")
+    p 
+      a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") a medium post of Zeynep Tufekci
     | (2014-08-14)
 
-  section
-    img(src="/images/BLM.jpg")
-    p
-      a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/") via The Intercept 
-      | (2016-06-09) 
