--- a/sections/slides/netzpolitick.jade
+++ b/sections/slides/netzpolitick.jade
@@ -11,12 +11,6 @@ html
     script(type='text/javascript', src='/js/vendor/jquery.js')
     script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
 
-    link(rel='stylesheet', href='/js/local/realitymeter.css')
-    script(type='text/javascript', src='/js/local/realitymeter.js')
-    script(type='text/javascript', src='/js/vendor/moment.min.js')
-    script(type='text/javascript', src='/js/vendor/d3.min.js')
-    script(type='text/javascript', src='/js/vendor/lodash.min.js')
-
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
@@ -35,7 +29,7 @@ html
         include project
         include howdoesitwork
         include interfaces
-        include plan
+        include roadmap
         include team
 
     script.
