--- a/sections/slides/personalisation.jade
+++ b/sections/slides/personalisation.jade
@@ -18,7 +18,7 @@ section
         b Algorithms 
         | are our robots
 
-      li.fragment they intermediate our access on the information
+      li.fragment they intermediate access to the informations
 
       li.fragment supposedly they help you having a
         b better 
