--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -15,17 +15,22 @@ section
 
   section
 
-    p four days ago
-    p https://www.rt.com/news/364235-merkel-facebook-google-algorithms/
-    p 2016-10-27
+    blockquote
+      “The algorithms must be made public, so that one can inform oneself as an interested citizen on questions like: what influences my behavior on the internet and that of others?”
+      “These algorithms, when they are not transparent, can lead to a distortion of our perception, they narrow our breadth of information.”
+    img(src="/images/MerkelGoogleFacebook.png")
+    p 
+      a(href="https://www.rt.com/news/364235-merkel-facebook-google-algorithms/") via RT
+      | 2016-10-27
 
   section
 
-    p http://commondreams.org/views/2016/07/14/whats-good-facebook-not-so-good-democracy
+    h3 A.K.A.
 
-  section 
-    p https://www.bloomberg.com/view/articles/2016-07-05/facebook-is-bad-for-democracy
+    ul
+      li Filter bubble
+      li Echo chambers
+      li Algorithm discrimination
+      li Reality distortion 
+      li Technocratic scapegoat
 
-  section
-    p European Union regulations on algorithmic decision-making and a "right to explanation"
-    p https://arxiv.org/abs/1606.08813
