--- a/sections/slides/roadmap.jade
+++ b/sections/slides/roadmap.jade
@@ -1,6 +1,6 @@
-block plan
+block roadmap
 
 section
 
-  h3 Roadmap, 11/16 03/17
+  h3 Roadmap, 11/2016 to 03/2017
   img(src="/images/fbtrex-plan.png")
