--- a/sections/slides/socialpolicy.jade
+++ b/sections/slides/socialpolicy.jade
@@ -9,8 +9,8 @@ section
 
   ul
     li.fragment (Mostly?) driven by 
-      b social policies
+      b Social policies
     ul
-      li.fragment social policies are tool for the collectivity to do self-governance and self-awareness
-      li.fragment their effect is in dissuade harmful behaviros and incentivate useful behavior
+      li.fragment Social policies are tool for the collectivity to do self-governance and self-awareness
+      li.fragment Intended to dissuade harmful behaviors and incentivate useful behaviors
 
