--- a/styles/index.styl
+++ b/styles/index.styl
@@ -34,6 +34,10 @@ p
   padding-bottom 2%
   border-bottom #3b5999 0.7em solid
 
+  h2
+    border-left #3b5999 0.01em solid
+    padding-left 0.1em
+
 .polite-propaganda
   padding-right 10% 
   padding-left 10%
