--- a/sections/slides/howdoesitwork.jade
+++ b/sections/slides/howdoesitwork.jade
@@ -1,60 +1,66 @@
 block howdoesitwork
 
-  section 
-
-    h3 How does it work?
-
-    ul
-      li Facebook's users joining our project are called Supporter, it is an explicit opt-in, because you need to install a browser extension
-
-      li.fragment the Extension, 
-        b monitor and scrape  
-        | the facebook feed, when find a public shared post, collect the HTML section, and send to a server 
-        img(src="/images/public.png")
-      li.fragment Content shared with friends only, or intended for a reduced audience, are ignored 
-        img(src="/images/notpublic.png")
-
-    i.fragment we don't want risk to leak activities not explicitly public and analyze public activities is a safe first step
-
   section
 
-    h3 Then
+    section 
 
-    ul
-      li we collect a dataset; publicly accessible, easy to be mirrored
-      li.fragment the dataset is composed by:
-        ul
-          li 
-            b metadata
-            | useful to understand Facebook behavior.
-          li 
-            b the (post) impression 
-            | content, useful to provide high level analysis:
-          ul
-            li.fragment text analysis
-            li.fragment escape the filter bubble
-            li.fragment understand your personal trends
-            li.fragment see you friends influence
-            li.fragment see what you are not seeing and so on
+      h3 How does it work?
 
-  section
-
-    h3 Not just personal benefit
-
-    ul
-      li Personalisation algorithms influence the collectively, and collectively have to be analyzed
-      li Researchers, supporters (or bots! ;) can organize themselves and tese these algorithms. For example, you might:
       ul
-        li.fragment Specifiy a keyword in your Extension (to identify your control group in the dataset, and do analysis only on that)
-        li.fragment Have some fresh/new users behaving in the same way, might facebook treating them equally? which are the parameters that influence more?
+        li Facebook's users joining our project are named
+          b Supporter
+          |, it is an explicit opt-in, you need to install a browser extension (now is Tampermonkey, in 1 month shall be native)
 
-  section
+        li.fragment the Extension, 
+          b monitor and scrape  
+          | the facebook feed, when find a public shared post, collect the HTML section, and send to a server 
+          img(src="/images/public.png")
+        li.fragment Content shared with friends only, or intended for a reduced audience, are ignored 
+          img(src="/images/notpublic.png")
 
-    h3 Disclaimer
+      i.fragment we don't want risk to leak activities not explicitly public and analyze public activities is a safe first step
 
-    p Currently, with the Tampermonkey alpha, 
-      b we are analyzing all the posts, but not the content 
-      | this can lead to some (not so dramatic how they might looks like, because if you have not privilege to access a content having the knowledge that a postId exists don't lead to any additional knowledge) 
-    p 
-      b Dataset of the alpha will be deleted when we enter in beta stage
-  
+    section
+
+      h3 Then
+
+      ul
+        li We collect a dataset; publicly 
+          a(href="https://facebook.tracking.exposed/impact") accessible
+          |, easy to be mirrored
+        li.fragment the dataset is composed by:
+          ul
+            li 
+              b metadata
+              | useful to understand Facebook behavior.
+            li 
+              b the (post) impression 
+              | content, useful to provide high level analysis:
+            ul
+              li.fragment text analysis
+              li.fragment escape the filter bubble
+              li.fragment understand your personal trends
+              li.fragment see you friends influence
+              li.fragment see what you are not seeing and so on
+
+    section
+
+      h3 Not just personal benefit
+
+      ul
+        li Personalisation algorithms influence the collectively, and collectively have to be analyzed
+        li Researchers, supporters (or bots! ;) can organize themselves and tese these algorithms. For example, you might:
+        ul
+          li.fragment Specifiy a keyword in your Extension (to identify your control group in the dataset, and do analysis only on that)
+          li.fragment Have some fresh/new users behaving in the same way, might facebook treating them equally? which are the parameters that influence more?
+
+    section
+
+      h3 Disclaimer
+
+      p Currently, with the Tampermonkey alpha, 
+        b we are analyzing all the posts, but not the content 
+        | this can lead to some (not so dramatic how they might looks like, because if you have not privilege to access a content having the knowledge that a postId exists don't lead to any additional knowledge) 
+      p 
+        b Dataset of the alpha will be deleted when we enter in beta stage
+    
