--- a/sections/slides/team.jade
+++ b/sections/slides/team.jade
@@ -4,11 +4,11 @@ block team
  
     h3 and now?
 
-      ul
-        li we are a small team of developers and philosophers
-        li I'm leaving Berlin :'( but Alberto is here
-        li we've an English mailing list for contributors
-        li using github + Taiga/AGILE metodology
-        li soon or later, we've to deal with grant, donations
-        li researcher are important
-        li developers of new visualisations even more ;)
+    ul
+      li we are a small team of developers and philosophers
+      li I'm leaving Berlin :°( but Alberto is here →
+      li We've an English mailing list, only for if you want do something
+      li Using github + Taiga/AGILE metodology
+      li Soon or later, we've to deal with grant, donations
+      li Researchers are important
+      li Developers of new visualisations even more ;)
