some last small fixes

--- a/sections/slides/link.jade
+++ b/sections/slides/link.jade
@@ -4,8 +4,11 @@ section
 
   section
     p
-      b Personalisation algorithms ==
-      | tools of social politics! ↓ 
+      b Personalisation algorithms
+      | are tools of 
+      b Social Politics! ↓ 
+    p 
+      i TFW.... policy maker, politics and critical judgment are on average 10 years late
 
   section
     img(src="/images/blockingofextremism.png")
