--- a/sections/slides/personalisation.jade
+++ b/sections/slides/personalisation.jade
@@ -5,22 +5,21 @@ section
   section
 
     h2 technology make our life easier!
-    p for example in the '70 this was our expectation of "support" ↓ 
+    p for example in the '70 this was our expectation of "technological assistance" ↓ 
 
   section(data-background="/images/robotAssistant.jpeg")
 
   section
 
-    h2 40 year later ...
-
+    h2 40 years later...
     ul
-      li.fragment
-        b Algorithms 
-        | are our robots
+      li.fragment Nowadays 
+        b algorithms 
+        | are our technological assistant, specially: personalisation algorithm
 
-      li.fragment they intermediate access to the informations
+      li.fragment They intermediate access to the informations
 
-      li.fragment supposedly they help you having a
+      li.fragment Supposedly they help us in having a
         b better 
         | experience, a more suitable, pleasante and appropriate 
         b information diet
