--- a/sections/slides/howdoesitwork.jade
+++ b/sections/slides/howdoesitwork.jade
@@ -59,8 +59,7 @@ block howdoesitwork
       h3 Disclaimer
 
       p Currently, with the Tampermonkey alpha, 
-        b we are analyzing all the posts, but not the content 
-        | this can lead to some (not so dramatic how they might looks like, because if you have not privilege to access a content having the knowledge that a postId exists don't lead to any additional knowledge) 
+        b we are analyzing all the posts, but not the content.
       p 
         b Dataset of the alpha will be deleted when we enter in beta stage
     
