--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -8,16 +8,13 @@ section
     ul
       li.fragment Collectivity has not accountability nor agenda on the 
         b social outcome
-
       li.fragment Currently are private company driven by business interest determining what it is better and what it is not
 
-      li.fragment Policy, politics and critical judgment are 10 years late
 
   section
+    blockquote “The algorithms must be made public, so that one can inform oneself as an interested citizen on questions like: what influences my behavior on the internet and that of others?”
+      | “These algorithms, when they are not transparent, can lead to a distortion of our perception, they narrow our breadth of information.”
 
-    blockquote
-      “The algorithms must be made public, so that one can inform oneself as an interested citizen on questions like: what influences my behavior on the internet and that of others?”
-      “These algorithms, when they are not transparent, can lead to a distortion of our perception, they narrow our breadth of information.”
     img(src="/images/MerkelGoogleFacebook.png")
     p 
       a(href="https://www.rt.com/news/364235-merkel-facebook-google-algorithms/") via RT
