--- a/sections/slides/netzpolitick.jade
+++ b/sections/slides/netzpolitick.jade
@@ -22,9 +22,9 @@ html
       .slides
 
         include landing
+        include pitch
         include personalisation
         include socialpolicy
-        include link
         include problemswithpa
         include project
         include howdoesitwork
