--- a/sections/slides/personalisation.jade
+++ b/sections/slides/personalisation.jade
@@ -4,23 +4,24 @@ section
 
   section
 
-    h2 technology make our life easier!
-    p for example in the '70 this was our expectation of "technological assistance" ↓ 
+    p In spite of appearences, I feel a strong esteem for facebook as company
+    p.right This project is intended to support society, policy maker, journalist and user to get a better understanding about power dynamics in the algorithm age
+    p Facebook has 1 billion ~700 million (maybe) users worldwide, will remain for many years a reference point and their influence can only increase
+    div.fragment
+    p.right society was not probably so ready ?
 
   section(data-background="/images/robotAssistant.jpeg")
 
   section
 
-    h2 40 years later...
+    h2 but technology take a different path
     ul
-      li.fragment Nowadays 
-        b algorithms 
-        | are our technological assistant, specially: personalisation algorithm
+      li
+        b software → app → algorithms 
+        | are our technological assistants, specially: personalisation algorithm
 
-      li.fragment They intermediate access to the informations
-
-      li.fragment Supposedly they help us in having a
-        b better 
-        | experience, a more suitable, pleasante and appropriate 
+      li Supposedly help us having a 
+        b better  
+        | experience, a more appropriate 
         b information diet
         |.
