--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -6,8 +6,9 @@ section
 
     h2 problems with that?
     ul
-      li.fragment Collectivity has not accountability nor agenda on the 
-        b social outcome
+      li.fragment Collectivity has no accountability on the 
+        b social outcome 
+      | is simply powewless
       li.fragment Currently are private company driven by business interest determining what it is better and what it is not
 
 
