--- a/sections/slides/socialpolicy.jade
+++ b/sections/slides/socialpolicy.jade
@@ -2,15 +2,46 @@ block socialpolicy
 
 section
 
-  p.right
-    i a small digression on...
+  section
 
-  h2 Collective behavior!
+    h2 Collective behavior
 
-  ul
-    li.fragment (Mostly?) driven by 
-      b Social policies
     ul
-      li.fragment Social policies are tool for the collectivity to do self-governance and self-awareness
-      li.fragment Intended to dissuade harmful behaviors and incentivate useful behaviors
+      li.fragment It is driven by 
+        b Social policies
+      ul
+        li Social policies are tool for the collectivity to do self-governance and self-awareness
+        li they are intended to dissuade harmful behaviors and incentivate useful behaviors
+
+  section
+    img(src="/images/blockingofextremism.png")
+    p
+      a(href="http://www.reuters.com/article/us-internet-extremism-video-exclusive-idUSKCN0ZB00M") via Reuters 
+      | (2016-06-25)
+
+  section
+    img(src="/images/facebookEmotionsManipulation.png")
+    p
+      a(href="https://www.theguardian.com/technology/2014/jun/29/facebook-users-emotions-news-feeds") via TheGuardian
+      | (2014-06-29) + 
+      a(href="http://www.pnas.org/content/111/24/8788.full") Paper
+      |.
+
+  section
+    img(src="/images/facebookRulesOnExperimenting.png")
+    p 
+      a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/") via TechnologyReview
+    | (2016-06-15)
+
+  section
+    img(src="/images/ferguson.png")
+    p 
+      a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") a medium post of Zeynep Tufekci
+    | (2014-08-14)
+
+  section
+    p
+      b Personalisation algorithms
+      | are a tools of  
+      b Social Politics!
 
